<resources>
    <!-- Application name -->
    <string name="app_name">Techpoint</string>

    <!-- Google Play url. Change your.package.name with your own package name. -->
    <string name="google_play_url">https://play.google.com/store/apps/details?id=com.formatrix.techpoint</string>
    <!-- Banner ad id. Insert your own banner id, you can get banner id via admob. -->
    <string name="banner_ad_unit_id">ca-app-pub-4878824784032216/9983506288</string>
    <!-- Interstitial ad id. Insert your own interstitial id, you can get interstitial id via admob. -->
    <string name="interstitial_ad_unit_id">ca-app-pub-4878824784032216/2460239483</string>
    <!-- Social media URLs. Change with your Facebook and Twitter page. -->
    <string name="url_facebook">https://web.facebook.com/techpointdotng</string>
    <string name="url_twitter">https://twitter.com/techpointdotng?lang=en</string>

    <!--p=s-->
    <string name="instagram">Instagram</string>
    <string name="url_instagram">https://www.instagram.com/techpointdotng</string>

    <!-- Handling articles without category -->
    <string name="uncategorized">Uncategorized</string>

    <!-- Content -->
    <string name="published_at">published at</string>
    <string name="by">by</string>

    <!-- Alert message -->
    <string name="no_result">No result.</string>
    <string name="no_internet_connection">Check your connection and try again.</string>
    <string name="no_comment">No comment.</string>
    <string name="response_error">Cannot connect to server.</string>
    <string name="retry">Retry</string>

    <!-- About preferences values -->
    <string name="pref_app_title">Application Name</string>
    <string name="pref_app_summary">Techpoint</string>
    <string name="pref_version_title">Build Version</string>
    <string name="pref_version_summary">Version 1.1</string>
    <string name="pref_developer_title">Developer</string>
    <string name="pref_developer_summary">Formatrix Digital</string>
    <string name="pref_copyright_title">Copyright</string>
    <string name="pref_copyright_summary">Copyright&#174; 2017 Formatrix Digital.\nAll rights reserved</string>
    <string name="pref_share_title">Share</string>
    <string name="pref_share_summary">Tell your friend about this app</string>
    <string name="pref_rate_review_title">Rate &amp; Review</string>
    <string name="pref_rate_review_summary">Rate and review this app if you think it is awesome</string>
    <string name="pref_feedback_title">Enquiries &amp; Feedback</string>
    <string name="pref_feedback_summary">Send a message to the developer</string>

    <!-- About preferences keys, DO NOT change preferences keys below -->
    <string name="pref_copyright_key">prefCopyRightKey</string>
    <string name="pref_feedback_key">prefFeedBackKey</string>
    <string name="pref_share_key">prefShareKey</string>
    <string name="pref_rate_review_key">prefRateReviewKey</string>

    <!-- Sharing contents -->
    <string name="share_to">Share to</string>
    <string name="subject">Hi, I just read an article via Techpoint app</string>
    <string name="message">You can download Techpoint app for Android at </string>

    <!-- Drawer menu items and toolbar titles  -->
    <string name="recent_post">Latest Post</string>
    <string name="categories">Categories</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="about">About</string>
    <string name="comment">Comment</string>
    <string name="search_hint">Search</string>

    <!-- Menu items name -->
    <string name="menu_comment">Comment</string>
    <string name="menu_share">Share</string>
    <string name="menu_search">Search</string>
    <string name="menu_backward">Backward</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_refresh">Refresh</string>

    <!-- Dialog -->
    <string name="add_comment">Add comment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="add_comment_success">Adding comment success. Your comment will appear once it approved by admin.</string>
    <string name="add_comment_failed">Adding comment failed.</string>
    <string name="all_forms_must_be_filled">All forms must be filled.</string>


    <!--YoUTUBE STRINGS-->

    <!-- Youtube developer key. Insert your own developer key. -->
    <string name="youtube_apikey">AIzaSyAv4yfWpls0cqSqgXCNSJqfP0GgOzNu7i0</string>
    <!-- Channel and playlist names, you can change the text but do NOT remove New Videos field. -->
    <string-array name="channel_names">
        <item></item>
        <item></item>
    </string-array>

    <!-- If it is channel than set it with 1, if it is playlist set it with 2. -->
    <string-array name="video_types">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Channel and playlist ids -->
    <string-array name="channel_ids">
        <item>0</item>
        <item>UC9T6ECutY4EPwJnGlbw4BzA</item>
    </string-array>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!-- Date Util -->
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>


    <integer name="ripple_duration">30</integer>

    <string name="new_videos">New Videos</string>

    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="video">Videos</string>
    <string name="back_to_post">Back to Post</string>
    <string name="magazine">Magazine</string>
    <string name="contact_us">Contact Us</string>
    <string name="pref_developer">developer</string>
    <string name="pref_version">version</string>
    <string name="title_activity_form">Book an Event</string>
    <string name="choose">Choose</string>
    <string name="title_activity_feed">Send Message To Developer</string>
    <string name="magazine_1">Magazine 1</string>
    <string name="unlock_page">I am Unlocked</string>
    <string name="lock_page">I am Locked</string>

    <!--pdf strings-->

    <string name="app_name_with_index">Magazine (%1$d/%2$d)</string>
    <string name="info">Info</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="intro_message">welcome</string>

    <!--adcolony values-->
    <string name="app_id">app6d4953008fce422b91</string>
    <string name="zone_id">vz89dd6b7377e1473c99</string>
    <string name="subscribe">SUBSCRIBE</string>
</resources>


