<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Simple preference for app description -->
    <com.lb.material_preferences_library.custom_preferences.Preference
        android:title="@string/pref_app_title"
        android:summary="@string/app_name"/>

    <com.lb.material_preferences_library.custom_preferences.Preference
        android:key="@string/pref_version"
        android:title="@string/pref_version_title"
        android:summary="@string/pref_version_summary"/>

    <com.lb.material_preferences_library.custom_preferences.Preference
        android:key="@string/pref_developer"
        android:title="@string/pref_developer_title"
        android:summary="@string/pref_developer_summary"/>

    <com.lb.material_preferences_library.custom_preferences.Preference
        android:key="@string/pref_copyright_key"
        android:title="@string/pref_copyright_title"
        android:summary="@string/pref_copyright_summary"/>
    <com.lb.material_preferences_library.custom_preferences.Preference
        android:key="@string/pref_share_key"
        android:title="@string/pref_share_title"
        android:summary="@string/pref_share_summary"/>

    <com.lb.material_preferences_library.custom_preferences.Preference
        android:key="@string/pref_rate_review_key"
        android:title="@string/pref_rate_review_title"
        android:summary="@string/pref_rate_review_summary"/>
    <com.lb.material_preferences_library.custom_preferences.Preference
        android:key="@string/pref_feedback_key"
        android:title="@string/pref_feedback_title"
        android:summary="@string/pref_feedback_summary"/>


    <!-- End of simple preference -->
</PreferenceScreen>
