<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:met_floatingLabel="normal"
        app:met_primaryColor="@color/accent_color"
        app:met_singleLineEllipsis="true"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:met_floatingLabel="normal"
        app:met_primaryColor="@color/accent_color"
        android:inputType="textEmailAddress"
        app:met_singleLineEllipsis="true"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edtComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        app:met_floatingLabel="normal"
        app:met_primaryColor="@color/accent_color"/>

</LinearLayout>