<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background_color">

    <LinearLayout
        android:id="@+id/lytRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:id="@+id/lblAlert"
            android:text="@string/no_internet_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_new"
            android:textSize="@dimen/subhead"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRetry"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/retry"
            android:theme="@style/RaisedButtonStyle"/>
    </LinearLayout>

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/parallax_image_height"
        android:layout_alignParentTop="true"/>

    <!--android:background="@drawable/splash_image_2"-->

    <!--<LinearLayout-->
        <!--android:id="@+id/layoutDots"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/dots_height"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginBottom="@dimen/dots_margin_bottom"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal" />-->

    <TextView
        android:id="@+id/lblNoResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_result"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/subhead" />

    <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
        android:id="@+id/prgLoading"
        android:layout_width="@dimen/circleprogressbar_width"
        android:layout_height="@dimen/circleprogressbar_height"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:mlpb_enable_circle_background="true"/>

    <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
        android:id="@+id/ultimate_recycler_view"
        android:layout_below="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView">
    </com.marshalchen.ultimaterecyclerview.UltimateRecyclerView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        android:background="@color/window_background_color"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
