<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background_color" >

        <LinearLayout
            android:id="@+id/lytRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone">
            <TextView
                android:id="@+id/lblAlert"
                android:text="@string/no_internet_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/subhead"/>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnRetry"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/retry"
                android:theme="@style/RaisedButtonStyle"/>
        </LinearLayout>

        <TextView
            android:id="@+id/lblNoResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_comment"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/subhead" />

        <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
            android:id="@+id/prgLoading"
            android:layout_width="@dimen/circleprogressbar_width"
            android:layout_height="@dimen/circleprogressbar_height"
            android:layout_gravity="center"
            android:visibility="gone"
            app:mlpb_enable_circle_background="true"/>

        <com.marshalchen.ultimaterecyclerview.UltimateRecyclerView
            android:id="@+id/ultimate_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </com.marshalchen.ultimaterecyclerview.UltimateRecyclerView>

    <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/standard_margin"
        app:fab_colorNormal="@color/accent_color"
        app:fab_colorPressed="@color/light_primary_color"/>
</FrameLayout>
